fixing links and alignment

--- a/Antelope Site/_stylesheets/main.css
+++ b/Antelope Site/_stylesheets/main.css
@@ -1,6 +1,10 @@
 #header {
 	padding: 0 0 30px 0;
 }
+#cute {
+	text-align: center;
+	padding-left: 38%;
+}
 
 header {
 	height: 18%;
